--- a/style.css
+++ b/style.css
@@ -40,13 +40,13 @@ h1, h2 {
     color: #fff;
 }
 
-.inputs button {
+.add-button {
     background-color: #00bcd4;
     color: white;
     cursor: pointer;
 }
 
-.inputs button:hover {
+.add-button:hover {
     background-color: #0097a7;
 }
 
